template/vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create full VPC with Flow Logs, Subnets, NAT Gateways, Route Tables, and VPC Endpoints (S3/DynamoDB)

Parameters:
  Env:
    Description: Environment (dev,stg,prod etc)
    Type: String
  System:
    Description: System ID
    Type: String
  VPCCidr:
    Description: VPC IP Range
    Type: String
  PubSubCidr01:
    Description: Public Subnet Cidr01
    Type: String
  PubSubCidr02:
    Description: Public Subnet Cidr02
    Type: String
  PriAPSubCidr01:
    Description: Private Application Subnet Cidr01
    Type: String
  PriAPSubCidr02:
    Description: Private Application Subnet Cidr02
    Type: String
  PriDBSubCidr01:
    Description: Private DB Subnet Cidr01
    Type: String
  PriDBSubCidr02:
    Description: Private DB Subnet Cidr02
    Type: String

Mappings:
  AzMap:
    ap-northeast-1:
      1st: ap-northeast-1c
      2nd: ap-northeast-1d

Resources:

  #--------------------------------------------------------------------------
  # Flow Log S3 Bucket
  #--------------------------------------------------------------------------

  FlowLogBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub ${Env}-${System}-flowlog-bucket
      VersioningConfiguration:
        Status: Enabled
      LifecycleConfiguration:
        Rules:
          - Id: ExpireOldLogs
            Status: Enabled
            ExpirationInDays: 365
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-flowlog-bucket
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  FlowLogBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref FlowLogBucket
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: delivery.logs.amazonaws.com
            Action: 's3:PutObject'
            Resource: !Sub '${FlowLogBucket.Arn}/*'
            Condition:
              StringEquals:
                's3:x-amz-acl': 'bucket-owner-full-control'
          - Sid: DenyInsecureConnections
            Effect: Deny
            Principal: '*'
            Action: 's3:*'
            Resource:
              - !Sub '${FlowLogBucket.Arn}'
              - !Sub '${FlowLogBucket.Arn}/*'
            Condition:
              Bool:
                aws:SecureTransport: false
          - Sid: DenyTLSVersionBelow12
            Effect: Deny
            Principal: '*'
            Action: 's3:*'
            Resource:
              - !Sub '${FlowLogBucket.Arn}'
              - !Sub '${FlowLogBucket.Arn}/*'
            Condition:
              NumericLessThan:
                s3:TlsVersion: 1.2

  #--------------------------------------------------------------------------
  # VPC + Internet Gateway + Flow Logs
  #--------------------------------------------------------------------------

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-vpc
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-igw
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  VPCFlowLogs:
    Type: AWS::EC2::FlowLog
    Properties:
      TrafficType: ALL
      LogDestinationType: s3
      LogDestination: !GetAtt FlowLogBucket.Arn
      ResourceType: VPC
      ResourceId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-vpc-flowlog
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  #--------------------------------------------------------------------------
  # Subnets
  #--------------------------------------------------------------------------

  PubSub01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PubSubCidr01
      AvailabilityZone: !FindInMap [AzMap, !Ref AWS::Region, 1st]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pub-sub01
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PubSub02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PubSubCidr02
      AvailabilityZone: !FindInMap [AzMap, !Ref AWS::Region, 2nd]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pub-sub02
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PriAPSub01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PriAPSubCidr01
      AvailabilityZone: !FindInMap [AzMap, !Ref AWS::Region, 1st]
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pri-ap-sub01
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PriAPSub02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PriAPSubCidr02
      AvailabilityZone: !FindInMap [AzMap, !Ref AWS::Region, 2nd]
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pri-ap-sub02
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PriDBSub01:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PriDBSubCidr01
      AvailabilityZone: !FindInMap [AzMap, !Ref AWS::Region, 1st]
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pri-db-sub01
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PriDBSub02:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PriDBSubCidr02
      AvailabilityZone: !FindInMap [AzMap, !Ref AWS::Region, 2nd]
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pri-db-sub02
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  #--------------------------------------------------------------------------
  # NAT Gateways + EIP
  #--------------------------------------------------------------------------

  EIP01:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-natgateway-eip01
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  EIP02:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-natgateway-eip02
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  NatGateway01:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP01.AllocationId
      SubnetId: !Ref PubSub01
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-natgateway01
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  NatGateway02:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIP02.AllocationId
      SubnetId: !Ref PubSub02
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-natgateway02
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  #--------------------------------------------------------------------------
  # Route Tables and Routes
  #--------------------------------------------------------------------------

  PubRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pub-rt
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PriAPRouteTable01:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pri-ap-rt01
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PriAPRouteTable02:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pri-ap-rt02
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PriDBRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${Env}-${System}-pri-db-rt
        - Key: Env
          Value: !Ref Env
        - Key: System
          Value: !Ref System

  PublicGwRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      RouteTableId: !Ref PubRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  NatGatewayRoute01:
    Type: AWS::EC2::Route
    DependsOn: NatGateway01
    Properties:
      RouteTableId: !Ref PriAPRouteTable01
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway01

  NatGatewayRoute02:
    Type: AWS::EC2::Route
    DependsOn: NatGateway02
    Properties:
      RouteTableId: !Ref PriAPRouteTable02
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway02

  #--------------------------------------------------------------------------
  # Route Table Associations
  #--------------------------------------------------------------------------

  PubSubRouteTableAssociation01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PubSub01
      RouteTableId: !Ref PubRouteTable

  PubSubRouteTableAssociation02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PubSub02
      RouteTableId: !Ref PubRouteTable

  PriAPSubRouteTableAssociation01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PriAPSub01
      RouteTableId: !Ref PriAPRouteTable01

  PriAPSubRouteTableAssociation02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PriAPSub02
      RouteTableId: !Ref PriAPRouteTable02

  PriDBSubRouteTableAssociation01:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PriDBSub01
      RouteTableId: !Ref PriDBRouteTable

  PriDBSubRouteTableAssociation02:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PriDBSub02
      RouteTableId: !Ref PriDBRouteTable

  #--------------------------------------------------------------------------
  # VPC Gateway Endpoints
  #--------------------------------------------------------------------------

  S3Endpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcId: !Ref VPC
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PubRouteTable
        - !Ref PriAPRouteTable01
        - !Ref PriAPRouteTable02
        - !Ref PriDBRouteTable

  DynamoDBEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.dynamodb
      VpcId: !Ref VPC
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PubRouteTable
        - !Ref PriAPRouteTable01
        - !Ref PriAPRouteTable02
        - !Ref PriDBRouteTable

Outputs:
  VPCId:
    Value: !Ref VPC
  InternetGatewayId:
    Value: !Ref InternetGateway
  FlowLogBucketName:
    Value: !Ref FlowLogBucket
  S3EndpointId:
    Value: !Ref S3Endpoint
  DynamoDBEndpointId:
    Value: !Ref DynamoDBEndpoint
